--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "puppeteer": "^24.6.1"
-  },
   "name": "headless-server",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "express": "^4.17.1",
+    "puppeteer": "^19.0.0"
+  },
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
+  }
 }
